## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# CONCURRENCY
######################################################################

concurrency_FILES = \
    backend/concurrency/ts_order_n2o_txn_manager.cpp \
    backend/concurrency/transaction_manager.cpp \
    backend/concurrency/transaction.cpp \
    backend/concurrency/transaction_manager_factory.cpp \
    backend/concurrency/epoch_manager.cpp \
    backend/concurrency/epoch_manager_factory.cpp \
    backend/concurrency/ts_order_opt_n2o_txn_manager.cpp

concurrency_INCLUDES = \
					   -I$(srcdir)/concurrency