## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# BRIDGE
######################################################################

logging_FILES = \
			   backend/logging/checkpoint_manager.cpp \
			   backend/logging/durability_factory.cpp \
			   backend/logging/log_buffer.cpp \
			   backend/logging/log_buffer_pool.cpp \
			   backend/logging/log_record.cpp \
			   backend/logging/logging_util.cpp \
			   backend/logging/phylog_logger.cpp \
			   backend/logging/phylog_log_manager.cpp \
			   backend/logging/dep_logger.cpp \
			   backend/logging/dep_log_manager.cpp \
			   backend/logging/epoch_logger.cpp \
			   backend/logging/epoch_log_manager.cpp \
			   backend/logging/delta_snapshot_pool.cpp

logging_INCLUDES = \
                  -I$(srcdir)/logging
