## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# BRIDGE
######################################################################

logging_FILES = \
			   backend/logging/durability_factory.cpp \
			   backend/logging/checkpoint_manager.cpp \
			   backend/logging/phylog_checkpoint_manager.cpp \
			   backend/logging/physical_checkpoint_manager.cpp \
			   backend/logging/log_buffer.cpp \
			   backend/logging/log_buffer_pool.cpp \
			   backend/logging/log_record.cpp \
			   backend/logging/logging_util.cpp \
			   backend/logging/log_manager.cpp \
			   backend/logging/phylog_logger.cpp \
			   backend/logging/phylog_log_manager.cpp \
			   backend/logging/physical_logger.cpp \
			   backend/logging/physical_log_manager.cpp \
			   backend/logging/command_logger.cpp \
			   backend/logging/command_log_manager.cpp \
			   backend/logging/dep_logger.cpp \
			   backend/logging/dep_log_manager.cpp \
			   backend/logging/reordered_physical_log_manager.cpp \
			   backend/logging/reordered_physical_logger.cpp

logging_INCLUDES = \
                  -I$(srcdir)/logging
